<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.datetimecalc.DateTimeCalcFragment">

    <Space
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:text="@string/start_date"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:text="@string/start_time_prefix"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addUpButton"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="13dp"
        android:gravity="center_vertical|end"
        android:text="@string/arithmetic_add"
        app:layout_constraintEnd_toStartOf="@+id/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <TextView
        android:id="@+id/subtractButton"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="13dp"
        android:gravity="start|center_vertical"
        android:text="@string/arithmetic_subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle"
        app:layout_constraintTop_toBottomOf="@+id/timeButton" />

    <LinearLayout
        android:id="@+id/yearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addUpButton">

        <EditText
            android:id="@+id/yearsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/yearsText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:text="@string/years" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/monthLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middle"
        app:layout_constraintTop_toBottomOf="@id/subtractButton">

        <EditText
            android:id="@+id/monthsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/monthsText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:text="@string/months" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weekLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearLayout">

        <EditText
            android:id="@+id/weeksEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/weeksText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weeks"
            android:ems="4"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middle"
        app:layout_constraintTop_toBottomOf="@id/monthLayout">

        <EditText
            android:id="@+id/daysEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/daysText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:ems="4"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hourLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weekLayout">

        <EditText
            android:id="@+id/hoursEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/hoursText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:ems="4"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/minLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middle"
        app:layout_constraintTop_toBottomOf="@id/dayLayout">

        <EditText
            android:id="@+id/minsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="0"
            android:inputType="number" />

        <TextView
            android:id="@+id/minsText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mins"
            android:ems="4"/>
    </LinearLayout>

    <TextView
        android:id="@+id/endDateText"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="End-Datum:"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourLayout" />

    <LinearLayout
        android:id="@+id/endDateLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="13dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle"
        app:layout_constraintTop_toBottomOf="@+id/minLayout">

        <TextView
            android:id="@+id/endDateResultText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="01.01.2000"
            android:textSize="20sp"
            android:ems="6"/>

        <ImageButton
            android:id="@+id/endDateCopyButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_icon_clipboard" />
    </LinearLayout>

    <TextView
        android:id="@+id/endTimeText"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:text="End-Uhrzeit:"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateText" />

    <LinearLayout
        android:id="@+id/endTimeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle"
        app:layout_constraintTop_toBottomOf="@+id/endDateLayout">

        <TextView
            android:id="@+id/endTimeResultText"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="00:00 Uhr"
            android:textSize="20sp"
            android:ems="6"/>

        <ImageButton
            android:id="@+id/endTimeCopyButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_icon_clipboard" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="13dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeText">

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_results"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/addToCalendarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/add_to_calendar"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>